Configurations (#37)
* Includign db inserts

* Fixing insert of data